Fix image not displaying opacity correctly on mobile

--- a/src/components/language-switcher.module.scss
+++ b/src/components/language-switcher.module.scss
@@ -1,4 +1,4 @@
-.link {
+.link > img {
   opacity: 0.5;
 
   transition: opacity 150ms;
@@ -8,6 +8,6 @@
   }
 }
 
-.active {
+.active > img {
   opacity: 1;
 }
